# toolbox

./: .gitignore  LICENSE  README.md
agent-fleet/: .gitignore  ARCHITECTURE_PYTHON.md  CLAUDE.md  DDD_PRACTICES.md  GOOD_PRACTICES.md  config.toml.example  pyproject.toml  run.py
agent-fleet/fleet/: dispatcher.py  gh.py  reviewer.py  worker.py
agent-fleet/fleet/inspector/: code.py
agent-fleet/tests/: test_inspector_code.py  test_worker.py
bilan-depenses-train/: README.md  bilan-depenses-train.py
consoles-hub/: BEHAVIOR.md  CLAUDE.md  CLEAN_CODE.md  README.md  VISION.md  com.vdumas.consoles-hub.agent.plist.tmpl  install.sh
gestion-locative/: .dependency-cruiser.cjs  .env.example  .gitignore  .mise.toml  ACCESSIBILITY.md  BDD_PRACTICES.md  CLAUDE.md  LMNP.md  LOCATION_MEUBLEE_REGLES.md  LOGICIEL_GESTION_LOCATIVE.md  README.md  RISKS.md  SOFTWARE_CRAFTSMANSHIP.md  VISION.md  cucumber.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
invoice-manager/: .gitignore  AUTO_ENTREPRENEUR_RULES.md  BDD_PRACTICES.md  CLAUDE.md  README.md  UI_DESIGN.md  VISION.md  app.py  config.py  config.toml.example  constants.py  context_helpers.py  dashboard.py  db.py  export.py  extract.py  init_workspace.py  parsers.py  profiles.py  queries.py  review.py  run.py
mark-empty-folders/: README.md  mark_empty_folders.py
rename-justificatifs-achat/: README.md  rename-justificatifs-achat.py
rename-justificatifs-voyage/: README.md  rename-justificatifs-voyage.py
sncf-trip-proofs/: .gitignore  README.md  bilan-depenses-train.py  config.example.json  (+2 more)
(+960 files in other folders)
