[project]
name = "agent-fleet"
version = "0.1.0"
description = "Autonomous agent fleet driven by GitHub Issues"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
